tranzactii-sex: Add content

--- a/tranzactii-sex/slides.tex
+++ b/tranzactii-sex/slides.tex
@@ -12,7 +12,95 @@ razvan.deaconescu@cs.pub.ro}
 
 \frame{\titlepage}
 
-\begin{frame}{TODO}
+\begin{frame}{}
+  \centering
+  \vspace{0.5cm}
+  \Large{Relațiile înseamnă negociere} \\
+  \vspace{0.5cm}
+  \Large{Relațiile au nevoie de compromis} \\
+  \vspace{0.5cm}
+  \Large{Relațiile sunt de muncă}
+\end{frame}
+
+\begin{frame}{}
+  \centering
+  \vspace{0.5cm}
+  \Large{\textbf{Mindset negativ}} \\
+  \vspace{0.5cm}
+  \Large{Teama de a nu pierde ce ai} \\
+  \vspace{0.5cm}
+  \Large{Lipsa de alternative}
+\end{frame}
+
+\begin{frame}{}
+  \centering
+  \vspace{0.5cm}
+  \Large{\textbf{Genuine attraction cannot be negociated.}} \\
+  \vspace{3mm}
+  \hfill \textit{Rollo Tomassi (The Rational Male)}
+\end{frame}
+
+\begin{frame}{Cele două planuri ale unei relații}
+  \Large{Plan personal / intim}
+    \begin{itemize}
+      \item atracție
+      \item sex
+      \item \textit{the right one} / persoana potrivită
+    \end{itemize}
+  \Large{Plan social / economic}
+    \begin{itemize}
+      \item resurse
+      \item confort
+      \item \textit{the good one} / persoana bună
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Economic: Femei și bărbați}
+  \begin{itemize}
+    \item bărbații mai puternici fizic
+    \item tradițional: bărbații au / câștigă, femeile nu au / primesc
+    \item tradițional: bărbații au resursele, au puterea
+    \item tradițional: într-o relație femeile sunt mai preocupate de planul economic decât bărbații
+    \item nu \textbf{doar} de planul economic, dar \textbf{mai} preocupate
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Schimbări (recente)}
+  \begin{itemize}
+    \item puterea fizică are relevanță scăzută
+    \item acces al femeilor la resurse, putere economică, putere politică
+    \item preocupare din ce în ce mai scăzută a femeilor pentru planul economic într-o relație
+    \item (tendință spre) egalitate
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{În plus}
+  \begin{itemize}
+    \item decizie individuală, nu decizia părinților sau a comunității
+    \item stigmat social/economic redus pentru sex premarital, divorț, parteneriate multiple
+    \item profilerarea soluțiilor contraceptive
+    \item populație planetară foarte mare: 7.7 miliarde de oameni
+    \item lume interconectată global
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Populația planetei}
+  \begin{figure}[!htbp]
+    \centering
+    \includegraphics[width=0.8\textwidth]{img/world-population.png} \\
+    \tiny{\url{https://ourworldindata.org/world-population-growth}}
+  \end{figure}
+\end{frame}
+
+\begin{frame}{Populația planetei (2)}
+  \begin{itemize}
+    \item TODO: creștere cu numere
+    \item TODO
+    \item TODO
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Cum se întâlnesc cuplurile}
   \begin{itemize}
     \item TODO
     \item TODO
@@ -20,18 +108,166 @@ razvan.deaconescu@cs.pub.ro}
   \end{itemize}
 \end{frame}
 
-% Tranzacții, piețe libere și sex
+\begin{frame}{Before and After}
+  \begin{columns}
+    \begin{column}{0.5\textwidth}
+      \textbf{before}
+        \begin{itemize}
+          \scriptsize
+          \item reglementare
+          \item populație redusă
+          \item autarhie
+        \end{itemize}
+    \end{column}
+    \begin{column}{0.5\textwidth}
+      \textbf{after}
+        \begin{itemize}
+          \scriptsize
+          \item piață liberă
+          \item opțiuni multe
+          \item globalizare
+        \end{itemize}
+    \end{column}
+  \end{columns}
+\end{frame}
+
+\begin{frame}{}
+  \centering
+  \vspace{0.5cm}
+  \Large{echitate (\textit{fairness})}
+\end{frame}
+
+\begin{frame}{Particularități ale pieței relațiilor}
+  \begin{itemize}
+    \item nu poți acumula foarte mult ,,capital''
+    \item aproape toată lumea participă
+    \item fiecare este client și furnizor
+    \item agenți diferiți: bărbați și femei (partiționare aproape egală)
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Tinder}
+  \begin{itemize}
+    \item \url{https://www.businessofapps.com/data/tinder-statistics/}
+    \item Researchers using a female Tinder profile and unselectively liking male profiles got 200 matches within an hour, and 600 by the 4-hour mark. Male Tinder profiles only garnered 100 matches by the same juncture.
+    \item For men, the median time between getting a match and messaging standing at 2 minutes (63\% of men message a match within 5 minutes), while the equivalent for females is 38 minutes (only 18\% message within 5 minutes)
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Tinder (2)}
+  \begin{figure}[!htbp]
+    \centering
+    \includegraphics[width=0.8\textwidth]{img/tinder-gini.jpg} \\
+    \tiny{\url{https://medium.com/@worstonlinedater/tinder-experiments-ii-guys-unless-you-are-really-hot-you-are-probably-better-off-not-wasting-your-2ddf370a6e9a\#.jynuxn544}}
+  \end{figure}
+\end{frame}
+
+\begin{frame}{Asimetrie bărbați-femei (2)}
+  % poveste cu getting laid (SSW)
+  \begin{itemize}
+    \item TODO
+    \item TODO
+    \item TODO
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Asimetrie bărbați-femei (3)}
+  % slut vs slut-maker, de pe Twitter
+  \url{https://twitter.com/guilloelizalde/status/1223009493883277314}
+\end{frame}
+
+\begin{frame}{Asimetrie bărbați-femei (4)}
+  % 10 bărbați / 1 femeie vs 10 femei / 1 bărbat
+  \begin{itemize}
+    \item TODO
+    \item TODO
+    \item TODO
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Sex differences}
+  \url{https://twitter.com/SteveStuWill/status/1062662607285379072}
+  \url{https://threadreaderapp.com/thread/1062662607285379072.html}
+\end{frame}
+
+\begin{frame}{De ce asimetrie?}
+  \begin{itemize}
+    \item biologic sau social
+    \item evident, există influențe sociale, dar \ldots{}
+      \begin{itemize}
+        \item TODO din articol SSW
+        \item TODO din articol SSW
+        \item TODO din articol SSW
+      \end{itemize}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Asimetrie sexuală biologică}
+  \begin{columns}
+    \begin{column}{0.5\textwidth}
+      \textbf{bărbați}
+        \begin{itemize}
+          \scriptsize
+          \item cât mai multe partenere
+          \item \textit{spread the seed}
+          \item poligamie / poliginie
+        \end{itemize}
+    \end{column}
+    \begin{column}{0.5\textwidth}
+      \textbf{femei}
+        \begin{itemize}
+          \scriptsize
+          \item cel mai bun partener
+          \item \textit{protect the seed}
+          \item hipergamie
+        \end{itemize}
+    \end{column}
+  \end{columns}
+\end{frame}
+
+\begin{frame}{Consecințe}
+  \begin{itemize}
+    \item poliginie
+    \item mai mulți strămoși bărbați decât femei
+the present generation has 1.4 times as many female as male ancestors. We also tested the effect of sex-biased migration and sex-specific death rates and found that these are unlikely to explain alone the sex-biased TMRCA ratio observed in humans. Our results support the view that we are descended from males who were successful in a highly competitive context, while females were facing a much smaller female-female competition.
+      https://www.ncbi.nlm.nih.gov/pubmed/22743131
+
+    \item TODO
+    \item sistemul cultural al societății agricole primitive a crescut asimetria
+
+Once upon a time, 4,000 to 8,000 years after humanity invented agriculture, something very strange happened to human reproduction. Across the globe, for every 17 women who were reproducing, passing on genes that are still around today—only one man did the same.
+
+https://psmag.com/environment/17-to-1-reproductive-success
+https://genome.cshlp.org/content/early/2015/03/13/gr.186684.114.abstract
+
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Reglementări / Compensări}
+  \begin{itemize}
+    \item decizia la nivelul părinților, comunității
+    \item monogamie
+    \item oprobiu pentru sex în afara căsătoriei
+    \item prostituție
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Sexul ca tranzacție}
+  \begin{itemize}
+    \item TODO
+    \item TODO
+    \item TODO
+  \end{itemize}
+\end{frame}
+
 % "biology hasn't kept up with technology" (Whitney Cummings)
 % 2.4 milioane de ani de evoluție (PD Mangan)
 % validativ și tranzacțional
-% genuine desire cannot be negociated
 % someone for everyone
 % afaceri: reci, schimb, tranzacție
 % prietenie: ne place de cineva, interese comune
 % există prietenie pe interes: e prieten cu tine și obține ceva: bani, cerc social, sfaturi
 % axa: nu am de ales, trebuie, ar trebui, ar fi bine, vreau
-% Tinder stats
-% asimetrie a sexelor
 % TEDx Stanley Park
 % sex as a chore, MontrealWomen TEDx
 % https://quillette.com/2019/05/14/memes-genes-and-sex-differences-an-interview-with-dr-steve-stewart-williams/
@@ -43,18 +279,8 @@ razvan.deaconescu@cs.pub.ro}
 % Women tend to want quality. Men tend to want quantity.
 % https://areomagazine.com/2017/06/30/would-you-agree-to-sex-with-a-total-stranger/
 %
-% https://threadreaderapp.com/thread/1062662607285379072.html
-% https://twitter.com/SteveStuWill/status/1062662607285379072
-%
 % https://www.ted.com/talks/brian_little_who_are_you_really_the_puzzle_of_personality?language=en
 % 7.5 times extroverted women
-%
-% The Ape That Understood the Universe
-% Jared Diamond: Why Do Men Hunt?
-% Jared Diamond: The Evolution of Human Sexuality
-% The Captain pe Twitter
-% The Red Queen
-% Rolf Degen pe Twitter
 
 \begin{frame}{Resurse și recomandări}
   \begin{itemize}
