tranzactii-sex: Fill slides

--- a/tranzactii-sex/slides.tex
+++ b/tranzactii-sex/slides.tex
@@ -14,20 +14,26 @@ razvan.deaconescu@cs.pub.ro}
 
 \begin{frame}{}
   \centering
+  \pause
   \vspace{0.5cm}
   \Large{Relațiile înseamnă negociere} \\
+  \pause
   \vspace{0.5cm}
   \Large{Relațiile au nevoie de compromis} \\
+  \pause
   \vspace{0.5cm}
   \Large{Relațiile sunt de muncă}
 \end{frame}
 
 \begin{frame}{}
   \centering
+  \pause
   \vspace{0.5cm}
   \Large{\textbf{Mindset negativ}} \\
+  \pause
   \vspace{0.5cm}
   \Large{Teama de a nu pierde ce ai} \\
+  \pause
   \vspace{0.5cm}
   \Large{Lipsa de alternative}
 \end{frame}
@@ -40,46 +46,76 @@ razvan.deaconescu@cs.pub.ro}
   \hfill \textit{Rollo Tomassi (The Rational Male)}
 \end{frame}
 
+\begin{frame}{}
+  \centering
+  \vspace{0.5cm}
+  \Large{\textbf{Attraction to get it started. Good communication to keep it going. Shared values to make it last.}}
+  \vspace{3mm}
+  \hfill \textit{Ed Latimore on Twitter}
+\end{frame}
+
 \begin{frame}{Cele două planuri ale unei relații}
+  \pause
   \Large{Plan personal / intim}
     \begin{itemize}
+      \pause
       \item atracție
+      \pause
       \item sex
+      \pause
       \item \textit{the right one} / persoana potrivită
     \end{itemize}
+  \pause
   \Large{Plan social / economic}
     \begin{itemize}
+      \pause
       \item resurse
+      \pause
       \item confort
+      \pause
       \item \textit{the good one} / persoana bună
     \end{itemize}
 \end{frame}
 
 \begin{frame}{Economic: Femei și bărbați}
   \begin{itemize}
+    \pause
     \item bărbații mai puternici fizic
+    \pause
     \item tradițional: bărbații au / câștigă, femeile nu au / primesc
+    \pause
     \item tradițional: bărbații au resursele, au puterea
+    \pause
     \item tradițional: într-o relație femeile sunt mai preocupate de planul economic decât bărbații
+    \pause
     \item nu \textbf{doar} de planul economic, dar \textbf{mai} preocupate
   \end{itemize}
 \end{frame}
 
 \begin{frame}{Schimbări (recente)}
   \begin{itemize}
+    \pause
     \item puterea fizică are relevanță scăzută
+    \pause
     \item acces al femeilor la resurse, putere economică, putere politică
-    \item preocupare din ce în ce mai scăzută a femeilor pentru planul economic într-o relație
+    \pause
+    \item consecință: preocupare din ce în ce mai scăzută a femeilor pentru planul economic într-o relație
+    \pause
     \item (tendință spre) egalitate
   \end{itemize}
 \end{frame}
 
 \begin{frame}{În plus}
   \begin{itemize}
+    \pause
     \item decizie individuală, nu decizia părinților sau a comunității
+    \pause
     \item stigmat social/economic redus pentru sex premarital, divorț, parteneriate multiple
+    \pause
     \item profilerarea soluțiilor contraceptive
+    \pause
     \item populație planetară foarte mare: 7.7 miliarde de oameni
+    \pause
     \item lume interconectată global
   \end{itemize}
 \end{frame}
@@ -94,18 +130,25 @@ razvan.deaconescu@cs.pub.ro}
 
 \begin{frame}{Populația planetei (2)}
   \begin{itemize}
-    \item TODO: creștere cu numere
-    \item TODO
-    \item TODO
+    \pause
+    \item 200.000 de ani pentru a atinge 1 miliard de oameni
+    \pause
+    \item 200 de ani să crească de la 1 miliard la 7 miliarde
+    \pause
+    \item 4 milioane de oameni în 10.000 BC
+    \pause
+    \item 190 de milioane de oameni în 0 AD
+    \pause
+    \item 1 miliard în 1800 AD
   \end{itemize}
 \end{frame}
 
 \begin{frame}{Cum se întâlnesc cuplurile}
-  \begin{itemize}
-    \item TODO
-    \item TODO
-    \item TODO
-  \end{itemize}
+  \begin{figure}[!htbp]
+    \centering
+    \includegraphics[width=0.8\textwidth]{img/evolution-of-dating.png} \\
+    \tiny{\url{https://arxiv.org/abs/1709.10478}}
+  \end{figure}
 \end{frame}
 
 \begin{frame}{Before and After}
@@ -114,8 +157,11 @@ razvan.deaconescu@cs.pub.ro}
       \textbf{before}
         \begin{itemize}
           \scriptsize
+          \pause
           \item reglementare
+          \pause
           \item populație redusă
+          \pause
           \item autarhie
         \end{itemize}
     \end{column}
@@ -123,8 +169,11 @@ razvan.deaconescu@cs.pub.ro}
       \textbf{after}
         \begin{itemize}
           \scriptsize
+          \pause
           \item piață liberă
+          \pause
           \item opțiuni multe
+          \pause
           \item globalizare
         \end{itemize}
     \end{column}
@@ -133,15 +182,20 @@ razvan.deaconescu@cs.pub.ro}
 
 \begin{frame}{}
   \centering
+  \pause
   \vspace{0.5cm}
   \Large{echitate (\textit{fairness})}
 \end{frame}
 
 \begin{frame}{Particularități ale pieței relațiilor}
   \begin{itemize}
+    \pause
     \item nu poți acumula foarte mult ,,capital''
+    \pause
     \item aproape toată lumea participă
+    \pause
     \item fiecare este client și furnizor
+    \pause
     \item agenți diferiți: bărbați și femei (partiționare aproape egală)
   \end{itemize}
 \end{frame}
@@ -149,7 +203,9 @@ razvan.deaconescu@cs.pub.ro}
 \begin{frame}{Tinder}
   \begin{itemize}
     \item \url{https://www.businessofapps.com/data/tinder-statistics/}
+    \pause
     \item Researchers using a female Tinder profile and unselectively liking male profiles got 200 matches within an hour, and 600 by the 4-hour mark. Male Tinder profiles only garnered 100 matches by the same juncture.
+    \pause
     \item For men, the median time between getting a match and messaging standing at 2 minutes (63\% of men message a match within 5 minutes), while the equivalent for females is 38 minutes (only 18\% message within 5 minutes)
   \end{itemize}
 \end{frame}
@@ -163,25 +219,37 @@ razvan.deaconescu@cs.pub.ro}
 \end{frame}
 
 \begin{frame}{Asimetrie bărbați-femei (2)}
-  % poveste cu getting laid (SSW)
-  \begin{itemize}
-    \item TODO
-    \item TODO
-    \item TODO
-  \end{itemize}
+  \textit{An Irishman, an Italian, and an Iowan are arguing about which bar is the world's best. "The best bar in the world is Paddy's Pub in County Cork," says the Irishman. "After you've bought two drinks at Paddy's, the house stands you to a third." "That's a good bar," says the Italian, "but not as good as Antonio's in Old Napoli. At Antonio's, for every drink you buy the bartender buys you another." "Now, those sound like mighty fine bars," says the Iowan, "but the best bar in the world is Bob's Bar and Grill in Des Moines. When you go into Bob's you get three free drinks and then you get to go in the back room and get laid." The Irishman and the Italian are astonished to hear this, but they are forced to admit that Bob's Bar and Grill must indeed be the best bar in the world. Suddenly, however, the Italian gets suspicious. "Wait a minute," he says to the Iowan. "Did that actually happen to you personally?" "Well, no, not to me personally," admits the Iowan. "But it actually happened to my sister."}\\
+  \hfill \textit{Steve Stewart-Williams: The Ape That Understood the Universe}
 \end{frame}
 
-\begin{frame}{Asimetrie bărbați-femei (3)}
+\begin{frame}{Asimetrie bărbați-femei(3)}
+  \pause
+  \textit{A mountain of evidence suggests that the sexes do differ - on average - in their interest in casual sex and sexual variety.} \\
+  \hfill \textit{Steve Stewart-Williams: Keeping It Casual (\url{https://quillette.com/2018/10/14/keeping-it-casual/}} \\
+  \vspace{0.5cm}
+  \pause
+  \textit{He found 83 percent of men agreed to have sex with a highly attractive woman, whereas only 3 percent of women agreed to have sex with a highly attractive man. Among confederates of average attractiveness, 60 percent of men agreed to sex with a woman of average attractiveness, but no woman (0 percent) agreed to sex with a man of average attractiveness.} \\
+  \pause
+  \textit{Again, many more men (50\%) than women (5\%) were willing to have sex with a personally "vouched for" stranger. When asked, not one of the 95\% of women who declined sex reported physical safety concerns were a reason why.}
+  \pause
+  \hfill \url{https://areomagazine.com/2017/06/30/would-you-agree-to-sex-with-a-total-stranger/}
+\end{frame}
+
+\begin{frame}{Asimetrie bărbați-femei (4)}
   % slut vs slut-maker, de pe Twitter
   \url{https://twitter.com/guilloelizalde/status/1223009493883277314}
 \end{frame}
 
-\begin{frame}{Asimetrie bărbați-femei (4)}
+\begin{frame}{Asimetrie bărbați-femei (5)}
   % 10 bărbați / 1 femeie vs 10 femei / 1 bărbat
+  \pause
+  Ce s-ar întâpla dacă?
   \begin{itemize}
-    \item TODO
-    \item TODO
-    \item TODO
+    \pause
+    \item pe o insulă pustie naufragiază 10 bărbați și 1 femeie
+    \pause
+    \item pe o insulă pustie naufragiază 10 femei și 1 bărbat
   \end{itemize}
 \end{frame}
 
@@ -192,14 +260,20 @@ razvan.deaconescu@cs.pub.ro}
 
 \begin{frame}{De ce asimetrie?}
   \begin{itemize}
+    \pause
     \item biologic sau social
+    \pause
     \item evident, există influențe sociale, dar \ldots{}
       \begin{itemize}
-        \item TODO din articol SSW
-        \item TODO din articol SSW
-        \item TODO din articol SSW
+        \pause
+        \item \textit{Despite this, more than a half century after it (n. the pill) first appeared, women are still less willing than men to engage in casual sex.}
+        \pause
+        \item \textit{Lesbians have fewer partners than gays.}
+        \pause
+        \item \textit{.. men's stronger interest in casual sex and sexual novelty has survived society's best efforts to eradicate it. ... women's greater reticence about casual sex has survived the efforts of some feminists and other thought leaders to persuade women to cast off the shackles of patriarchy and match men in the casual sex arena.}
       \end{itemize}
   \end{itemize}
+  \url{https://quillette.com/2018/10/14/keeping-it-casual/}
 \end{frame}
 
 \begin{frame}{Asimetrie sexuală biologică}
@@ -208,8 +282,11 @@ razvan.deaconescu@cs.pub.ro}
       \textbf{bărbați}
         \begin{itemize}
           \scriptsize
+          \pause
           \item cât mai multe partenere
+          \pause
           \item \textit{spread the seed}
+          \pause
           \item poligamie / poliginie
         \end{itemize}
     \end{column}
@@ -217,8 +294,11 @@ razvan.deaconescu@cs.pub.ro}
       \textbf{femei}
         \begin{itemize}
           \scriptsize
+          \pause
           \item cel mai bun partener
+          \pause
           \item \textit{protect the seed}
+          \pause
           \item hipergamie
         \end{itemize}
     \end{column}
@@ -227,27 +307,30 @@ razvan.deaconescu@cs.pub.ro}
 
 \begin{frame}{Consecințe}
   \begin{itemize}
+    \pause
     \item poliginie
+    \pause
     \item mai mulți strămoși bărbați decât femei
-the present generation has 1.4 times as many female as male ancestors. We also tested the effect of sex-biased migration and sex-specific death rates and found that these are unlikely to explain alone the sex-biased TMRCA ratio observed in humans. Our results support the view that we are descended from males who were successful in a highly competitive context, while females were facing a much smaller female-female competition.
-      https://www.ncbi.nlm.nih.gov/pubmed/22743131
-
-    \item TODO
-    \item sistemul cultural al societății agricole primitive a crescut asimetria
-
-Once upon a time, 4,000 to 8,000 years after humanity invented agriculture, something very strange happened to human reproduction. Across the globe, for every 17 women who were reproducing, passing on genes that are still around today—only one man did the same.
-
-https://psmag.com/environment/17-to-1-reproductive-success
-https://genome.cshlp.org/content/early/2015/03/13/gr.186684.114.abstract
-
+      \textit{the present generation has 1.4 times as many female as male ancestors. We also tested the effect of sex-biased migration and sex-specific death rates and found that these are unlikely to explain alone the sex-biased TMRCA ratio observed in humans. Our results support the view that we are descended from males who were successful in a highly competitive context, while females were facing a much smaller female-female competition.}
+    \pause
+    \item sistemul cultural al societății agricole primitive a crescut asimetria \\
+      \textit{Once upon a time, 4,000 to 8,000 years after humanity invented agriculture, something very strange happened to human reproduction. Across the globe, for every 17 women who were reproducing, passing on genes that are still around today—only one man did the same.}
   \end{itemize}
+  \pause
+  \url{https://www.ncbi.nlm.nih.gov/pubmed/22743131}
+  \url{https://psmag.com/environment/17-to-1-reproductive-success} \\
+  \url{https://genome.cshlp.org/content/early/2015/03/13/gr.186684.114.abstract}
 \end{frame}
 
 \begin{frame}{Reglementări / Compensări}
   \begin{itemize}
+    \pause
     \item decizia la nivelul părinților, comunității
+    \pause
     \item monogamie
+    \pause
     \item oprobiu pentru sex în afara căsătoriei
+    \pause
     \item prostituție
   \end{itemize}
 \end{frame}
@@ -270,14 +353,8 @@ https://genome.cshlp.org/content/early/2015/03/13/gr.186684.114.abstract
 % axa: nu am de ales, trebuie, ar trebui, ar fi bine, vreau
 % TEDx Stanley Park
 % sex as a chore, MontrealWomen TEDx
-% https://quillette.com/2019/05/14/memes-genes-and-sex-differences-an-interview-with-dr-steve-stewart-williams/
 % dan ariely, where we are where we could be; we have to try to see what works
-% https://quillette.com/2018/10/14/keeping-it-casual/
 % https://quillette.com/2019/11/14/the-price-of-sex/
-% https://twitter.com/Quillette/status/1206831019837407232
-% Women want the best. Men take the next-best.
-% Women tend to want quality. Men tend to want quantity.
-% https://areomagazine.com/2017/06/30/would-you-agree-to-sex-with-a-total-stranger/
 %
 % https://www.ted.com/talks/brian_little_who_are_you_really_the_puzzle_of_personality?language=en
 % 7.5 times extroverted women
@@ -285,10 +362,10 @@ https://genome.cshlp.org/content/early/2015/03/13/gr.186684.114.abstract
 \begin{frame}{Resurse și recomandări}
   \begin{itemize}
     \item slide-urile prezentării: \url{https://www.slideshare.net/razvandeaconescu/}
-    \item The Ape That Understood the Universe
+    \item Steve Stewart-Williams: The Ape That Understood the Universe
+    \item Matt Ridley: The Red Queen
     \item Jared Diamond: Why Do Men Hunt?
     \item Jared Diamond: The Evolution of Human Sexuality
-    \item The Red Queen
     \item The Captain (Twitter)
     \item Rolf Degen (Twitter)
   \end{itemize}
