tranzactii-sex: Add slides on men and women sexual strategy

--- a/tranzactii-sex/slides.tex
+++ b/tranzactii-sex/slides.tex
@@ -335,15 +335,44 @@ razvan.deaconescu@cs.pub.ro}
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Sexul ca tranzacție}
+\begin{frame}{Consecințele reglementărilor}
   \begin{itemize}
-    \item TODO
-    \item TODO
-    \item TODO
+    \pause
+    \item stabilitate, pace/pacificare socială
+    \pause
+    \item someone for everyone
+    \pause
+    \item limitare, partener imperfect (nu ai alegere deplină)
+    \pause
+    \item reglementarea e mai avantajoasă în medie pentru bărbați dar dezavantajoasă în medie pentru femei
   \end{itemize}
 \end{frame}
 
-% "biology hasn't kept up with technology" (Whitney Cummings)
+\begin{frame}{Ce doresc bărbații?}
+  \centering
+  \pause
+  \vspace{1cm}
+  \Large{cât mai multe}
+\end{frame}
+
+\begin{frame}{Ce doresc femeile?}
+  \centering
+  \pause
+  \vspace{1cm}
+  \Large{cel mai bun} (perspectivă subiectivă)
+\end{frame}
+
+\begin{frame}{Problema cu ,,cel mai bun''}
+  \url{https://youtu.be/VaRvGTz-vl0?t=175}
+\end{frame}
+
+\begin{frame}{Când n-ai ce dorești}
+  \begin{itemize}
+    \item te mulțumești cu ce ai (reglementare internă/socială)
+    \item cauți alternative (piață liberă)
+  \end{itemize}
+\end{frame}
+
 % 2.4 milioane de ani de evoluție (PD Mangan)
 % validativ și tranzacțional
 % someone for everyone
