tranzactii-sex: Complete slides

--- a/tranzactii-sex/slides.tex
+++ b/tranzactii-sex/slides.tex
@@ -49,7 +49,7 @@ razvan.deaconescu@cs.pub.ro}
 \begin{frame}{}
   \centering
   \vspace{0.5cm}
-  \Large{\textbf{Attraction to get it started. Good communication to keep it going. Shared values to make it last.}}
+  \Large{\textbf{Attraction to get it started. Good communication to keep it going. Shared values to make it last.}} \\
   \vspace{3mm}
   \hfill \textit{Ed Latimore on Twitter}
 \end{frame}
@@ -112,7 +112,7 @@ razvan.deaconescu@cs.pub.ro}
     \pause
     \item stigmat social/economic redus pentru sex premarital, divorț, parteneriate multiple
     \pause
-    \item profilerarea soluțiilor contraceptive
+    \item proliferarea soluțiilor contraceptive
     \pause
     \item populație planetară foarte mare: 7.7 miliarde de oameni
     \pause
@@ -154,6 +154,7 @@ razvan.deaconescu@cs.pub.ro}
 \begin{frame}{Before and After}
   \begin{columns}
     \begin{column}{0.5\textwidth}
+      \pause
       \textbf{before}
         \begin{itemize}
           \scriptsize
@@ -166,6 +167,7 @@ razvan.deaconescu@cs.pub.ro}
         \end{itemize}
     \end{column}
     \begin{column}{0.5\textwidth}
+      \pause
       \textbf{after}
         \begin{itemize}
           \scriptsize
@@ -279,6 +281,7 @@ razvan.deaconescu@cs.pub.ro}
 \begin{frame}{Asimetrie sexuală biologică}
   \begin{columns}
     \begin{column}{0.5\textwidth}
+      \pause
       \textbf{bărbați}
         \begin{itemize}
           \scriptsize
@@ -291,6 +294,7 @@ razvan.deaconescu@cs.pub.ro}
         \end{itemize}
     \end{column}
     \begin{column}{0.5\textwidth}
+      \pause
       \textbf{femei}
         \begin{itemize}
           \scriptsize
@@ -308,16 +312,14 @@ razvan.deaconescu@cs.pub.ro}
 \begin{frame}{Consecințe}
   \begin{itemize}
     \pause
-    \item poliginie
-    \pause
-    \item mai mulți strămoși bărbați decât femei
+    \item mai mulți strămoși femei decât bărbați \\
       \textit{the present generation has 1.4 times as many female as male ancestors. We also tested the effect of sex-biased migration and sex-specific death rates and found that these are unlikely to explain alone the sex-biased TMRCA ratio observed in humans. Our results support the view that we are descended from males who were successful in a highly competitive context, while females were facing a much smaller female-female competition.}
     \pause
     \item sistemul cultural al societății agricole primitive a crescut asimetria \\
       \textit{Once upon a time, 4,000 to 8,000 years after humanity invented agriculture, something very strange happened to human reproduction. Across the globe, for every 17 women who were reproducing, passing on genes that are still around today—only one man did the same.}
   \end{itemize}
   \pause
-  \url{https://www.ncbi.nlm.nih.gov/pubmed/22743131}
+  \url{https://www.ncbi.nlm.nih.gov/pubmed/22743131} \\
   \url{https://psmag.com/environment/17-to-1-reproductive-success} \\
   \url{https://genome.cshlp.org/content/early/2015/03/13/gr.186684.114.abstract}
 \end{frame}
@@ -359,7 +361,7 @@ razvan.deaconescu@cs.pub.ro}
   \centering
   \pause
   \vspace{1cm}
-  \Large{cel mai bun} (perspectivă subiectivă)
+  \Large{cel mai bun}
 \end{frame}
 
 \begin{frame}{Problema cu ,,cel mai bun''}
@@ -368,33 +370,156 @@ razvan.deaconescu@cs.pub.ro}
 
 \begin{frame}{Când n-ai ce dorești}
   \begin{itemize}
+    \pause
     \item te mulțumești cu ce ai (reglementare internă/socială)
+    \pause
     \item cauți alternative (piață liberă)
   \end{itemize}
 \end{frame}
 
-% 2.4 milioane de ani de evoluție (PD Mangan)
-% validativ și tranzacțional
-% someone for everyone
-% afaceri: reci, schimb, tranzacție
-% prietenie: ne place de cineva, interese comune
-% există prietenie pe interes: e prieten cu tine și obține ceva: bani, cerc social, sfaturi
-% axa: nu am de ales, trebuie, ar trebui, ar fi bine, vreau
-% TEDx Stanley Park
-% sex as a chore, MontrealWomen TEDx
-% dan ariely, where we are where we could be; we have to try to see what works
-% https://quillette.com/2019/11/14/the-price-of-sex/
-%
-% https://www.ted.com/talks/brian_little_who_are_you_really_the_puzzle_of_personality?language=en
-% 7.5 times extroverted women
+\begin{frame}{Cum obții ceva?}
+  \begin{itemize}
+    \pause
+    \item obligi
+    \pause
+    \item tranzacțional
+    \pause
+    \item ți se dă (pur și simplu)
+  \end{itemize}
+\end{frame}
 
-\begin{frame}{Resurse și recomandări}
+\begin{frame}{Tranzacții socio-umane}
+  \begin{itemize}
+    \pause
+    \item Eric Berne: Games People Play
+    \pause
+    \item analiză tranzacțională
+    \pause
+    \item ,,mângâieri'' (\textit{strokes})
+    \pause
+    \item nevoie psihologică
+    \pause
+    \item activități, timp liber, jocuri
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{}
+  \centering
+  \pause
+  \vspace{0.5cm}
+  \Large{Sunt relațiile tranzacții?} \\
+  \pause
+  \vspace{0.5cm}
+  \Large{Relații de prietenie vs relații profesionale} \\
+  \pause
+  \vspace{0.5cm}
+  \Large{Relații de prietenie vs relații intime} \\
+\end{frame}
+
+\begin{frame}{}
+  \centering
+  \pause
+  \vspace{0.5cm}
+  \Large{Este sexul o tranzacție?} \\
+\end{frame}
+
+\begin{frame}{Plaja de obținere a sexului}
+  \begin{itemize}
+    \pause
+    \item viol, prostituție forțată
+    \pause
+    \item prostituție
+    \pause
+    \item relație de interes asumată (sugar daddy)
+    \pause
+    \item relație de interes neasumată (cadouri, vacanțe)
+    \pause
+    \item suficiență
+    \pause
+    \item validativ (\textit{genuine attraction})
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Cum arată o relație ,,perfectă''?}
+  \begin{itemize}
+    \pause
+    \item atracție (sex)
+    \pause
+    \item înțelegere / comunicare / compatibilitate
+    \pause
+    \item valori
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Cum ,,perfectezi'' o relație?}
+  \begin{itemize}
+    \pause
+    \item toate cele trei planuri: atracție, comunicare, valori
+    \pause
+    \item comunicarea și valorile sunt tranzacționale
+    \pause
+    \item atracția e validativă: nu poți negocia pe cineva să te placă
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Atracția}
+  \begin{itemize}
+    \pause
+    \item netranzacțională
+    \pause
+    \item competițională (piață liberă)
+    \pause
+    \item parte biologică și parte psihologică
+    \pause
+    \item mai bun: putere, carismă, confirmare socială / popularitate
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Da, dar \ldots}
+  \begin{itemize}
+    \pause
+    \item sunt urât(ă)
+    \pause
+    \item sunt gras(ă)
+    \pause
+    \item sunt enervant(ă)
+    \pause
+    \item sunt tipicar(ă)
+    \pause
+    \item ,,n-am tras lozul bun''
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Așa, și?}
+  \begin{itemize}
+    \pause
+    \item acceptă inechitatea
+    \pause
+    \item nu fugi de lucrurile neplăcute
+    \pause
+    \item lucrează
+    \pause
+    \item învață
+    \pause
+    \item îmbunătățește-te
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{}
+  \centering
+  \pause
+  \vspace{0.5cm}
+  \Large{Pune-te pe primul loc.} \\
+\end{frame}
+
+\begin{frame}{Resurse}
   \begin{itemize}
     \item slide-urile prezentării: \url{https://www.slideshare.net/razvandeaconescu/}
     \item Steve Stewart-Williams: The Ape That Understood the Universe
     \item Matt Ridley: The Red Queen
     \item Jared Diamond: Why Do Men Hunt?
     \item Jared Diamond: The Evolution of Human Sexuality
+    \item Eric Berne: Games People Play
     \item The Captain (Twitter)
     \item Rolf Degen (Twitter)
   \end{itemize}
